# fake_russian_tweets

./: .pre-commit-config.yaml  Dockerfile  EDA.ipynb  README.md  api.py  docker-compose.yml  explanation.ipynb  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bert_deploy/: configs.py  constants.py  explainability.py  predict.py  train.py  utils.py
bert_deploy/datasets/: __init__.py  base.py  covid_tweets.py  fake_tweets.py
bert_deploy/extractors/: __init__.py  base.py  csv.py
bert_deploy/prediction/: __init__.py  base_loader.py  model_loader.py  tweets_loader.py
config/: config_sample_csv.json  config_sample_fake_tweets_predict.json  config_sample_fake_tweets_train.json
