[tool.poetry]
name = "fake_russian_tweets"
version = "0.1.0"
description = ""
authors = ["Fabian Wolfmann <fawolfmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp38-cp38-linux_x86_64.whl", platform = "linux"}
transformers = {extras = ["torch"], version = "^4.9.1"}
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
pre-commit = "2.2.0"
isort = "5.8.0"
flake8 = "3.7.8"
pytest = "6.2.3"
pytest-cov = "2.11.1"
pytest-xdist = "2.2.1"
pylint = "2.7.4"
pdbpp = "0.10.2"
black = "19.10b0"
nox = "2020.12.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
  "C",
  "R",
  "no-else-return",
  "bad-continuation",
  "fixme",
  "protected-access",
  "too-few-public-methods",
]
